--- a/src/components/Weather/Weather.module.css
+++ b/src/components/Weather/Weather.module.css
@@ -1,14 +1,18 @@
 .content{
     padding: 2%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 2%;
+    display: flex;
+    
 }
 
 .infos{
-    box-shadow: 1px 1px 6px #8dece8;
+    box-shadow: 1px 1px 6px #a8a8a8;
+    flex-grow: 1;
+    height: 20vh;
+    margin-left: 1%;
 }
 
 .content section{
-    box-shadow: 1px 1px 6px #8dece8;
+    box-shadow: 1px 1px 6px #a8a8a8;
+    flex-grow: 1;
+    height: 50vh;
 }
