--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .content{
-    background-color: #d4d4d459;
+    background-color: #ebebeb;
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
     height: 100vh;
+    color: rgb(90, 90, 90);
+    font-size: 2vh;
 }
