--- a/src/components/search/Search.module.css
+++ b/src/components/search/Search.module.css
@@ -4,7 +4,10 @@
 }
 
 .content input{
-    border: none
+    border: none;
+    padding: .6%;
+    width: 20%;
+    color: rgb(90, 90, 90);
 }
 
 .searchBtn{
