--- a/src/components/search/Search.module.css
+++ b/src/components/search/Search.module.css
@@ -10,6 +10,10 @@
     color: rgb(90, 90, 90);
 }
 
+.content input:focus{
+    outline: 1px solid rgb(87, 194, 221);
+}
+
 .searchBtn{
     padding: 4px;
     width: 2%;
